    - Fix printf format strings
    - Fix build when using PostgreSQL and --enable-onchange-script
    - Add test for crypt return value
    - Remove unneeded forward declaration in vchkpw.c
    - Add missing include in cdb_seek.c
    - Add static in vdelivermail.c
    - Clean up calling maildrop in vdelivermail.c
    - Remove unneeded reallocation in vpalias.c
    - vpopmail-lazy.patch
    - fix ,S= tag in case spamassassin changed the file size  
        
  - Add an option --enable-onchange-script-before-and-after to call onchange
    script before and after a change
  - Add SQLite module, adapted from MySQL module code
  - Add an option --enable-sha512-passwords by default, and increase all 
    sql modules password size
  - Disable clear password option by default
  - Set vpasswd, vadddomain and vadduser default password length to 12, 
    and add optional password length in vpasswd
  - Fix crash in vpasswd, vadduser, vadddomain for very long password
  - Add an error code for too short passwords (minimum size = 12)
  - In vadddomain() : reject no TLD or invalid size TLD, or two consecutive '.'
  - Change max size of user name and gecos to 64, and increase temporary buffer
    in make_vpasswd_cdb to fix a crash after changing the user name size
  - Add fix from Roberto Puzzanghera : 
         - Fix mysql module compilation on Debian 11 / gcc 10
  - In vadddomain, remove domain if the postmaster user can't be created
  - Add minimum and maximum length of parameters in error messages
  - Add an option --enable-min-pwd-length to choose minimum password length
  - Add an option --enable-tinycdb to replace cdb code by libcdb
  - Fix bug in string_list_add when resizing the list
  - Add an error message in vpasswd, vadduser, vadddomain when using -r 
    and a password on command line
  - Allow -n in vadduser only if min password size = 0

5.4.33 - Released 10-23-2012
  Matt Brookings
  - Defaulted to Server::Disable=True in vusagec.conf