@@ -108,7 +108,8 @@ Unreleased -
     - Clean up calling maildrop in vdelivermail.c
     - Remove unneeded reallocation in vpalias.c
     - vpopmail-lazy.patch
-    - fix ,S= tag in case spamassassin changed the file size  
+    - fix ,S= tag in case spamassassin changed the file size
+    - fix those vfork() instances that do more than exec*() 
         
   - Add an option --enable-onchange-script-before-and-after to call onchange
     script before and after a change
